# management-system

./: .gitignore  README.md
backend/: .env.example  CMakeLists.txt
backend/include/: auth_controller.hpp  database.h  default_user_init.h  routes.h  schema_init.h  sha256.h  utils.h
backend/src/: app.cpp  database.cpp  default_user_init.cpp  routes.cpp  schema_init.cpp  utils.cpp
frontend/: .env  .env.example  middleware.js  next.config.mjs  package.json  pnpm-lock.yaml
frontend/src/app/: error.js  global-error.js  globals.css  layout.js  loading.js  not-found.js  page.js
frontend/src/app/(auth)/forgot-password/: page.js
frontend/src/app/(auth)/login/: page.js
frontend/src/app/(auth)/support/: page.js
frontend/src/app/(dashboard)/: layout.js
frontend/src/app/(dashboard)/dashboard/: page.js
frontend/src/app/(dashboard)/dashboard/enrollment/: page.js
frontend/src/app/(dashboard)/dashboard/facilities/: page.js
frontend/src/app/(dashboard)/dashboard/grades/: page.js
frontend/src/app/(dashboard)/dashboard/inventory/: page.js
frontend/src/app/(dashboard)/dashboard/requests/: page.js
frontend/src/app/(dashboard)/dashboard/students/: page.js
frontend/src/app/(dashboard)/settings/: page.js
frontend/src/app/(public)/policy/: page.js
frontend/src/app/(public)/student-handbook/: page.js
frontend/src/app/lib/: api.js
frontend/src/components/layout/: Footer.jsx  Navbar.jsx  SideBar.js
frontend/src/components/ui/: Button.jsx  Card.jsx  Modal.jsx  NavLink.jsx
scripts/: run_all.sh  run_backend.sh  run_frontend.sh
